BusinessPermit tests, Message extends serializable